--- a/Mobile-Application-development.html
+++ b/Mobile-Application-development.html
@@ -102,6 +102,7 @@
 
   <section class="service-main">
     <div class="container">
+
       <div class="row">
         <div class="col-lg-12">
           <h2>
@@ -110,6 +111,7 @@
           </h2>
         </div>
       </div>
+
       <div class="row mt-4">
         <div class="col-lg-6 animated fadeInUp wow">
           <div class="s-icon">
@@ -139,7 +141,7 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-6 animated fadeInUp wow">
+        <!-- <div class="col-lg-6 animated fadeInUp wow">
           <div class="s-icon">
             <img src="img/ios2.png" />
           </div>
@@ -152,7 +154,7 @@
               UI/UX design patterns to launch different types of iPhone applications.
             </p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
