--- a/blockchain-developments.html
+++ b/blockchain-developments.html
@@ -57,7 +57,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -179,11 +179,26 @@
             <p>
               Digital wallets are going to change the world's day to day transaction system. People are also referring
               to it as Blockchain Wallet. It will be the primary gateway to all blockchain interactions and therefore
-              all digital commerce in the near-term and all commerce and digital interaction in the
-              long-term.</br>Nanostuffs with deep understanding and expertise in cryptocurrency have already done mobile
+              all digital commerce in the near-term and all commerce and digital interaction in the long-term.
+              </br>Nanostuffs with deep understanding and expertise in cryptocurrency have already done mobile
               apps with digital wallets and created coins for different company as well. Nanostuffs provides consultancy
               in creating digital wallets and how to use them appropriately in your existing system is something very
               important and we have expertise in.
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-6 animated fadeInUp wow">
+          <div class="s-icon">
+            <img src="img/DW.png" />
+          </div>
+          <div class="s-content">
+            <strong>NFTs (Non-fungible tokens)</strong>
+            <p>
+              Nanostuffs has expertise in creating NFT marketplaces and NFTs, Non-fungible tokens (NFTs) are
+              non-modifiable digital assets that represent artworks, music pieces and other real-life objects and sit on
+              a blockchain. The NFT market is robust and continuously developing, leading to a rise in NFT users and
+              transactions. NFTs are becoming more popular in different industries and professions that deal in their
+              trade.
             </p>
           </div>
         </div>
