--- a/header.html
+++ b/header.html
@@ -1,11 +1,14 @@
 <div class="mob-out-logo">
-  <a href="index.html"><img src="img/logo.png"></a>
+  <a href="index.html"><img src="img/nanostuffs-logo.png"></a>
 </div>
+
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="mob-logo">
-    <a href="index.html"><img src="img/logo.png"></a>
+    <!-- <a href="index.html"><img src="img/logo.png"></a> -->
+    <a href="index.html"><img src="img/nanostuffs-logo.png"></a>
   </div>
+
   <ul class="side-menu">
     <li>
       <a href="index.html">Home</a>
@@ -18,34 +21,22 @@
         <a class="dropdown-item" href="salesforce-practice.html">Salesforce.com</a>
         <a class="dropdown-item" href="artificial-intelligence-machine-learning-developments.html">AI & ML</a>
         <a class="dropdown-item" href="blockchain-developments.html">Blockchain</a>
-        <a class="dropdown-item" href="Mobile-Application-development.html">Mobile Applications</a>
         <a class="dropdown-item" href="Progressive-Web-Apps-developments.html">PWA</a>
+        <a class="dropdown-item" href="Mobile-Application-development.html">Native Mobile Application</a>
         <a class="dropdown-item" href="http://edu.nanostuffs.com/" target="_blank">Educational Services</a>
       </div>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Our Products
-      </a>
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Our Products</a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="pardot-reporting-app.html">Pardot Reporting App</a>
-        <a class="dropdown-item" href="slaas.html">SLAAS</a>
-        <a class="dropdown-item" href="http://www.digiteksoftware.com/product-wrds.html" target="_blank">WRDS</a>
-        <a class="dropdown-item" href="http://www.digiteksoftware.com/product-wrds-mobi.html"
-          target="_blank">WRDSMobi</a>
-        <a class="dropdown-item" href="http://www.digiteksoftware.com/product-sketching-solution.html"
-          target="_blank">Sketching Solution</a>
-        <a class="dropdown-item" href="http://www.digiteksoftware.com/product-extenders.html" target="_blank">Product
-          Extenders</a>
+        <a class="dropdown-item" href="https://www.sfdocumentor.com/" target="_blank">SFDocumentor</a>
+        <a class="dropdown-item" href=" https://pardotreports.com/" target="_blank">Pardot Reporting App</a>
+        <a class="dropdown-item" href="http://wrdssoftware.com/" target="_blank">WRDS</a>
       </div>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="https://www.nanostuffs.com/blog/" target="_blank">Blog</a>
     </li>
-    <!-- 
-      <li>
-         <a href="career.html">Career</a> 
-      </li>-->
     <li>
       <a href="about.html">About Us</a>
     </li>
@@ -54,6 +45,9 @@
     </li>
     <li>
       <a href="contactus.html">Contact Us</a>
+    </li>
+    <li>
+      <a href="career.html">Career</a>
     </li>
     <li>
       <!--<a href="dreamforce2019.html"><b>We exhibited in Dreamforce 2019</b></a>-->
@@ -69,14 +63,6 @@
           </a> 
       </li>-->
   </ul>
-
-  <!--
-    <div class="mob-logo" style="text-align: center">
-		<span style="font-size: 0.8em;">Our Investor</span>
-       <a href="http://www.digiteksoftware.com" target="_blank">
-	   <img src="img/digi-logo.png"></a> 
-    </div>
-	-->
 
 </div>
 <span class="hamburger" onclick="openNav()">&#9776;</span>
@@ -105,7 +91,7 @@
         <div class="col-lg-3">
           <div class="logo">
             <a href="index.html">
-              <img src="img/logo.png" />
+              <img src="img/nanostuffs-logo-02 (2).png" />
             </a>
           </div>
         </div>
@@ -118,7 +104,10 @@
               <a href="contactus.html">Contact Us</a>
             </li>
             <li>
-              <!--<a href="dreamforce2019.html"><b>We exhibited in Dreamforce 2019</b></a>-->
+              <a href="career.html">Careers</a>
+            </li>
+            <li>
+              <a href="culture.html">Our Culture</a>
             </li>
             <li>
 
@@ -159,25 +148,20 @@
                       ML</a>
                     <a class="dropdown-item" href="blockchain-developments.html">Blockchain</a>
                     <a class="dropdown-item" href="Progressive-Web-Apps-developments.html">PWA</a>
-                    <a class="dropdown-item" href="Mobile-Application-development.html">Mobile Applications</a>
+                    <a class="dropdown-item" href="Mobile-Application-development.html">Native Mobile Application</a>
                     <a class="dropdown-item" href="http://edu.nanostuffs.com/" target="_blank">Educational Services</a>
                   </div>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                    Our Products
-                  </a>
+                  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown"> Our Products </a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="pardot-reporting-app.html">Pardot Reporting App</a>
-                    <a class="dropdown-item" href="slaas.html">SLAAS</a>
-                    <a class="dropdown-item" href="http://www.digiteksoftware.com/product-wrds.html"
-                      target="_blank">WRDS</a>
-                    <a class="dropdown-item" href="http://www.digiteksoftware.com/product-wrds-mobi.html"
-                      target="_blank">WRDSMobi</a>
-                    <a class="dropdown-item" href="http://www.digiteksoftware.com/product-sketching-solution.html"
-                      target="_blank">Sketching Solution</a>
-                    <a class="dropdown-item" href="http://www.digiteksoftware.com/product-extenders.html"
-                      target="_blank">Product Extenders</a>
+                    <a class="dropdown-item" href="https://www.sfdocumentor.com" target="_blank">SFDocumentor</a>
+                    <a class="dropdown-item" href=" https://pardotreports.com/" target="_blank">Pardot Reporting App</a>
+                    <a class="dropdown-item" href="http://wrdssoftware.com/" target="_blank">WRDS</a>
+
+                    <!-- <a class="dropdown-item" href="http://www.digiteksoftware.com/product-wrds-mobi.html" target="_blank">WRDSMobi</a> -->
+                    <!-- <a class="dropdown-item" href="http://www.digiteksoftware.com/product-sketching-solution.html" target="_blank">Sketching Solution</a> -->
+                    <!-- <a class="dropdown-item" href="http://www.digiteksoftware.com/product-extenders.html" target="_blank">Product Extenders</a> -->
                   </div>
                 </li>
                 <li class="nav-item">
