--- a/progressive-web-app-chose.html
+++ b/progressive-web-app-chose.html
@@ -85,13 +85,13 @@
     <!-- =-==- page banner -==-=-=-=- -->
 
     <section class="about-banner"
-        style="background-image: radial-gradient( circle 610px at 5.2% 51.6%,  rgb(32, 34, 82) 0%, rgb(83, 78, 143) 97.5% );  height: 400px;">
+        style="background-image: radial-gradient( circle 610px at 5.2% 51.6%,  rgba(5,8,114,1) 0%, rgba(7,3,53,1) 97.5% );  height: 400px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Progressive Web App Development </h1>
                     <p>
-                        Providing user experiences that look and feel like a mobile app with the reach of the web.
+                        Game Changing Apps
                     </p>
                 </div>
             </div>
@@ -100,18 +100,38 @@
 
     <!-- -=-=-=-=-=-=- content part -=---=-=-=--=- -->
 
-
     <section class="service-main">
         <div class="container">
+
             <div class="row">
                 <div class="col-lg-12">
                     <h2>
                         <div class="title-style"></div>
-                        <!-- PWA Expertise &<span>Experiences</span> -->
-                        What Will You Get From Cooperation With Us
+                        PWA Expertise &<span>Experiences</span>
                     </h2>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ai-main">
+                        <div class="ai-content" style="margin: 0px">
+                            <p>
+                                Our team of PWA developers combines years of experience with the strength of PWA
+                                technology to deliver state-of-the-art solutions that will make you stand out in a sea
+                                of millions. Nanostuffs technologies provides a service by
+                            </p>
+                            <ul>
+                                <li>Front-end ,React and Angular js developers</li>
+                                <li>Backend developers (Node js, Express js)</li>
+                                <li>Fullstack developers</li>
+                                <li>Database Enginers(Sql & Mongo DB)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="row mt-4">
 
                 <div class="col-lg-6 animated fadeInUp wow">
@@ -119,11 +139,11 @@
                         <img src="img/sf/setting.png" />
                     </div>
                     <div class="s-content">
-                        <strong>Custom Progressive Web App Development</strong>
+                        <strong>Experts with extensive training, knowledge, and skill</strong>
                         <p>
-                            We create custom progressive web applications with an intuitive user interface, quick
-                            animations, a native-like feel, and lightning fast speed based on your specific business
-                            requirements.
+                            Trust us to create a custom solution to your problem. We work within the confines of your
+                            marketplace environment, adapting to local factors such as your in-house hardware and
+                            external factors such as counter-measures from your competitors to ensure your satisfaction.
                         </p>
                     </div>
                 </div>
@@ -132,13 +152,11 @@
                         <img src="img/a_w_c.png" />
                     </div>
                     <div class="s-content">
-                        <strong>Progressive Web Design and Development</strong>
+                        <strong>Service standards that are unrivalled</strong>
                         <p>
-                            We assist you in unlocking the power of mobile devices in ways that traditional browsers
-                            can't. We provide a unified user experience and help you significantly increase your
-                            mobile
-                            conversion rates by using standardised and seamless progressive enhancement and
-                            development.
+                            Our software development service takes the best path for your company, whether it's to
+                            engage your employees or customers, or to enlighten, educate, or entertain them. We are a
+                            trustworthy IT services provider with an excellent reputation.
                         </p>
                     </div>
                 </div>
@@ -147,10 +165,11 @@
                         <img src="img/Paw.png" />
                     </div>
                     <div class="s-content">
-                        <strong>Responsive Web App Design</strong>
+                        <strong>Customer-centered strategy</strong>
                         <p>
-                            Our skilled Progressive web app developers create solutions that provide seamless
-                            interactivity across multiple devices and browsers at lightning speed.
+                            Unlike many others, we do not take a one-size-fits-all approach. Instead, we assess your
+                            requirements and design a technically sound and high-quality software solution for you. We
+                            strive to exceed your expectations.
                         </p>
                     </div>
                 </div>
@@ -159,11 +178,11 @@
                         <img src="img/si-1.png" />
                     </div>
                     <div class="s-content">
-                        <strong>Application Shell Architecture</strong>
+                        <strong>Business-Oriented Approach</strong>
                         <p>
-                            We build PWAs on the app shell model to provide an extraordinary user experience with
-                            easy -
-                            to - navigate and fast speed without interference.
+                            We excel at providing all-encompassing business-oriented PWA solutions. We start by
+                            understanding your specific business requirements, then strategize, analyse, design
+                            delightful experiences, and implement your solutions on time.
                         </p>
                     </div>
                 </div>
@@ -172,12 +191,12 @@
                         <img src="img/report1.png" />
                     </div>
                     <div class="s-content">
-                        <strong>Quality Assurance Testing</strong>
+                        <strong>Secured Ecosystem</strong>
                         <p>
-                            We use an agile development process and extensive testing for PWA development in order
-                            to
-                            offer total support and maintenance. We guarantee the bug-free operation of your PWA
-                            solutions.
+                            progressive web app development services Secured Ecosystem We ensure that your PWA solution
+                            is secure by using the HTTPS facility to prevent any unauthorized access. With data
+                            encryption, powerful architecture and multiple security layers, our PWA developers further
+                            enhance the security.
                         </p>
                     </div>
                 </div>
@@ -186,16 +205,67 @@
                         <img src="img/sf/computer_view.png" />
                     </div>
                     <div class="s-content">
-                        <strong>Secure Data Migration</strong>
+                        <strong>End-to-End Support and Maintenance</strong>
                         <p>
-                            We design a data-intensive online application using a structured methodology that allows
-                            for
-                            faster, smooth, and safe data movement across browsers.
+                            With a dedicated support staff, we address all issues affecting system efficiency at
+                            Nanostuffs. Our experts ensure that your PWA solution is always up to date and compatible
+                            with the most recent technologies.
                         </p>
                     </div>
                 </div>
 
             </div>
+        </div>
+    </section>
+
+
+    <br><br>
+
+    <hr>
+
+    <section class="service-main">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>
+                        <div class="title-style"></div>
+                        EXPERIENCES<span>Few Screenshots</span>
+                    </h2>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-lg-2">
+                </div>
+
+                <div class="col-lg-8">
+
+                    <div class="w3-content w3-display-container">
+
+                        <img class="mySlides" src="img/pwaimg/PWAS-07.jpg" style="width:100%; display:block" />
+                        <img class="mySlides" src="img/pwaimg/PWAS-10.jpg" style="width:100% " />
+                        <img class="mySlides" src="img/pwaimg/PWAS-08.jpg" style="width:100% " />
+                        <img class="mySlides" src="img/pwaimg/PWAS-09.jpg" style="width:100% " />
+
+                        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+                        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+                    </div>
+                </div>
+
+                <div class="col-lg-2">
+                </div>
+                <div class="col-lg-2">
+                </div>
+                <div class="col-lg-8">
+                    <p align="center">
+                        <a href="contactus.html" class="scroll-icon" style="color: #000000;">
+                            Next: Contack Us<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </a>
+                    </p>
+                </div>
+                <div class="col-lg-2">
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
