--- a/progressive-web-app-future.html
+++ b/progressive-web-app-future.html
@@ -86,12 +86,12 @@
 
 
     <section class="about-banner"
-        style="background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(147,67,67,1) 0%, rgba(111,27,27,1) 90% );  height: 400px;">
+    style="background-image: radial-gradient( circle 610px at 5.2% 51.6%,  rgba(5,8,114,1) 0%, rgba(7,3,53,1) 97.5% );  height: 400px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>The Future Of Web Development </h1>
-                    <p>PWA</p>
+                    <h1>PROGRESSIVE WEB APP DEVELOPMENT </h1>
+                    <p>The Future Of Web Development</p>
                 </div>
             </div>
         </div>
@@ -102,6 +102,7 @@
 
     <section class="service-main">
         <div class="container">
+
             <div class="row">
                 <div class="col-lg-12">
                     <h2>
@@ -111,6 +112,30 @@
                     </h2>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ai-main">
+                        <div class="ai-content" style="margin: 0px">
+                            <p>
+                                They are fast, engaging, and reliable; but what exactly does it mean for users,
+                                businesses, and developers? What kind of benefits do they deliver to each of these
+                                groups, and which gives them the title of "the solution most suitable for the
+                                mobile-first era?" We clear that up below.
+                            </p>
+                            <ul>
+                                <li>short loading time</li>
+                                <li>good performance in poor network conditions</li>
+                                <li> small size</li>
+                                <li> app-like features (add to home screen, offline mode, push notifications)</li>
+                                <li>avoid app aggregators (Google Play, App Store, etc.)</li>
+                                <li>instant updates</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="row mt-4">
 
                 <div class="col-lg-6 animated fadeInUp wow">
@@ -202,6 +227,55 @@
         </div>
     </section>
 
+
+    <br><br>
+
+    <hr>
+
+    <section class="service-main">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>
+                        <div class="title-style"></div>
+                        EXPERIENCES<span>Few Screenshots</span>
+                    </h2>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-lg-2">
+                </div>
+
+                <div class="col-lg-8">
+
+                    <div class="w3-content w3-display-container">
+
+                        <img class="mySlides" src="img/pwaimg/PWAS-01.jpg" style="width:100%; display:block">
+                        <img class="mySlides" src="img/pwaimg/PWAS-02.jpg" style="width:100%">
+                        <img class="mySlides" src="img/pwaimg/PWAS-03.jpg" style="width:100%">
+
+                        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+                        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+                    </div>
+                </div>
+
+                <div class="col-lg-2">
+                </div>
+                <div class="col-lg-2">
+                </div>
+                <div class="col-lg-8">
+                    <p align="center">
+                        <a href="progressive-web-app-process.html" class="scroll-icon" style="color: #000000;">
+                            Next: HOW IT GOES, STEP BY STEP <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </a>
+                    </p>
+                </div>
+                <div class="col-lg-2">
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
 
     <!-- =--=-=-=-= footer -==-=-=-=--= -->
     <div id="footer"></div>
