--- a/progressive-web-app-process.html
+++ b/progressive-web-app-process.html
@@ -85,13 +85,13 @@
     <!-- =-==- page banner -==-=-=-=- -->
 
     <section class="about-banner"
-        style="background-image: radial-gradient( circle 610px at 5.2% 51.6%,  rgba(5,8,114,1) 0%, rgba(7,3,53,1) 97.5% );  height: 400px;">
+    style="background-image: radial-gradient( circle 610px at 5.2% 51.6%,  rgba(5,8,114,1) 0%, rgba(7,3,53,1) 97.5% );  height: 400px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Progressive Web App Development </h1>
                     <p>
-
+                        Build your PWA with us.
                     </p>
                 </div>
             </div>
@@ -100,9 +100,9 @@
 
     <!-- -=-=-=-=-=-=- content part -=---=-=-=--=- -->
 
-
     <section class="service-main">
         <div class="container">
+
             <div class="row">
                 <div class="col-lg-12">
                     <h2>
@@ -111,6 +111,30 @@
                     </h2>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ai-main">
+                        <div class="ai-content" style="margin: 0px">
+                            <p>
+                                PWAs are web applications that leverage service workers, manifests, and other
+                                web-platform characteristics along with progressive enhancement to provide users with an
+                                experience comparable to that of native apps.PWAs provide a number of advantages to
+                                users
+                            </p>
+                            <ul>
+                                <li>installable</li>
+                                <li>progressively enhanced</li>
+                                <li>responsively designed</li>
+                                <li>re-engageable</li>
+                                <li>linkable</li>
+                                <li>instant updates</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="row mt-4">
 
                 <div class="col-lg-6 animated fadeInUp wow">
@@ -120,8 +144,8 @@
                     <div class="s-content">
                         <strong>Planning</strong>
                         <p>
-                            Our staff looks at your specifications and goals, considers your demands, and develops a
-                            draught plan for your approval.
+                            A team of full stack developers at Nanostuffs analyses your requirements and specifications,
+                            takes them into account, and creates a rough plan for your approval.
                         </p>
                     </div>
                 </div>
@@ -156,8 +180,9 @@
                     <div class="s-content">
                         <strong>Building</strong>
                         <p>
-                            Our programmers, graphic designers, and management team put in a lot of effort to make sure
-                            your software is as effective as possible.
+                            Our programmers work very hard to make sure your software is as efficient as possible, using
+                            the most recent technology such as React Js, Angular Js, Node, and Express to develop the
+                            application.
                     </div>
                 </div>
                 <div class="col-lg-6 animated fadeInUp wow">
@@ -179,15 +204,66 @@
                     <div class="s-content">
                         <strong>Deployment &amp; Maintenance</strong>
                         <p>
-                            After receiving your approval, the programme is distributed to the environment you choose.
-                            All rights to the customised solution are now yours. We strive to make all maintenance
-                            simple enough for your own personnel to complete, and we offer continuing maintenance for
-                            more complicated and/or expansive programmes.
+                            The programme is released to the environment of your choice after receiving clearance. You
+                            now own all rights to the customised solution. We work hard to make all maintenance
+                            straightforward enough for your staff to handle, and we provide ongoing maintenance for more
+                            intricate and/or extensive programmes.
                         </p>
                     </div>
                 </div>
 
             </div>
+
+        </div>
+    </section>
+
+
+    <br><br>
+
+    <hr>
+
+    <section class="service-main">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>
+                        <div class="title-style"></div>
+                        EXPERIENCES<span>Few Screenshots</span>
+                    </h2>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-lg-2">
+                </div>
+
+                <div class="col-lg-8">
+
+                    <div class="w3-content w3-display-container">
+                        <img class="mySlides" src="img/pwaimg/PWAS-04.jpg" style="width:100%; display:block" />
+                        <img class="mySlides" src="img/pwaimg/PWAS-05.jpg" style="width:100% " />
+                        <img class="mySlides" src="img/pwaimg/PWAS-06.jpg" style="width:100% " />
+
+                        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+                        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+                    </div>
+                </div>
+
+                <div class="col-lg-2">
+                </div>
+                <div class="col-lg-2">
+                </div>
+                <div class="col-lg-8">
+                    <p align="center">
+                        <a href="progressive-web-app-chose.html" class="scroll-icon" style="color: #000000;">
+                            Next: WHAT MAKES US THE RIGHT CHOICE?<i class="fa fa-long-arrow-right"
+                                aria-hidden="true"></i>
+                        </a>
+                    </p>
+                </div>
+                <div class="col-lg-2">
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
