--- a/footer.html
+++ b/footer.html
@@ -1,41 +1,40 @@
 <footer>
   <div class="container">
-    <div class="row align-items-center">      
+    <div class="row align-items-center">
       <div class="col-lg-6 countries">
         <a href="contactus.html">Pune, India</a>
-		<a href="contactus.html">Mumbai, India</a>
+        <a href="contactus.html">Mumbai, India</a>
         <a href="contactus.html">Columbus, USA</a>
         <a href="contactus.html">Dubai, UAE</a>
-		<a href="contactus.html">Singapore</a>
       </div>
-      <div class="col-lg-4 social">     
+      <div class="col-lg-4 social">
         <a href="https://www.facebook.com/nanostuffs"><i class="fa fa-facebook"></i></a>
         <a href="https://twitter.com/nanostuffs"><i class="fa fa-twitter"></i></a>
         <a href="http://www.linkedin.com/company/nanostuffs-technologies"><i class="fa fa-linkedin"></i></a>
-               
+
       </div>
       <div class="col-lg-2 mail">
         <a href="mailto: info@nanostuffs.com">info@nanostuffs.com</a>
       </div>
-    </div>    
+    </div>
   </div>
 </footer>
 <section class="copyright">
-<div class="container">
+  <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <p>© 2021 Nanostuffs, A Digitek Company. </p>
+        <p>© 2022 Nanostuffs Technologies Pvt. Ltd.</p>
       </div>
     </div>
   </div>
 </section>
-  
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114185073-1"></script>
 <script>
- window.dataLayer = window.dataLayer || [];
- function gtag(){dataLayer.push(arguments);}
- gtag('js', new Date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
 
- gtag('config', 'UA-114185073-1');
+  gtag('config', 'UA-114185073-1');
 </script>
